Your commit message

--- a/feed/index.html
+++ b/feed/index.html
@@ -11,7 +11,7 @@
 	<title>Gururaj Associates</title>
 	<atom:link href="https://gururajassociates.com/feed/" rel="self" type="application/rss+xml" />
 	<link>https://gururajassociates.com/</link>
-	<description>Auditor and Tax Consultants in Girinagar, Bangalore</description>
+	<description>Auditor and Tax Consultants in Girinagar, Delhi</description>
 	<lastBuildDate>Wed, 12 Jun 2024 06:55:58 +0000</lastBuildDate>
 	<language>en-US</language>
 	<sy:updatePeriod>
