--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -10,7 +10,7 @@
 	Comments for Gururaj Associates	</title>
 	<atom:link href="https://gururajassociates.com/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>https://gururajassociates.com/</link>
-	<description>Auditor and Tax Consultants in Girinagar, Bangalore</description>
+	<description>Auditor and Tax Consultants in Girinagar, Delhi</description>
 	<lastBuildDate>Wed, 12 Jun 2024 06:55:58 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
